--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: CI/CD to Local Tomcat
+name: Build and Deploy WAR to Tomcat
 
 on:
   push:
@@ -7,23 +7,42 @@ on:
       - feature-*
 
 jobs:
-  build-and-deploy:
-    runs-on: self-hosted
+  build:
+    name: Build WAR file
+    runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+    - name: Checkout source code
+      uses: actions/checkout@v4
 
     - name: Set up Java
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         java-version: '17'
-        distribution: 'adopt'
+        distribution: 'temurin'
 
-    - name: Build WAR
+    - name: Build WAR file using Maven
       run: mvn clean package
+
+    - name: Upload WAR artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: war-file
+        path: target/*.war
+
+  deploy:
+    name: Deploy to Tomcat
+    needs: build
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Download WAR artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: war-file
 
     - name: Deploy WAR to Tomcat
       run: |
         echo "Deploying WAR to Tomcat..."
-        curl --upload-file target/yourapp.war "http://admin:admin123@localhost:8080/manager/text/deploy?path=/yourapp&update=true"
+        curl --fail -T *.war "http://admin:admin123@localhost:8080/manager/text/deploy?path=/myapp&update=true"
